# honeybadger

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README  README.md  conanfile.txt  foramt.sh
.cicd/: sonar-project.properties  supervisord.conf
.cicd/docker/: Dockerfile  playbook.ansible.yaml
.circleci/: config.yml
.devcontainer/: devcontainer.json
cmake/: enable_code_coverage.cmake  enable_docs.cmake  enable_export_symbols.cmake  enable_tests.cmake  generate_graphviz.cmake  print_info_about_project.cmake  use_sanitizer.cmake
cmake/logger/: Logger.hh.in  add_logger.cmake
docs/: BUILD.md  CMakeLists.txt  branch_naming_convention.md  creating_documentation_process.md  development_work.md
docs/themes/: themes.md
docs/themes/damol/: theme.md
private/: note.cpp  note2.cpp
scripts/: check_formatted.sh  generate_ssh_key.sh  sctp_client.py
services/relay/: CMakeLists.txt
services/relay/src/: CMakeLists.txt  relay.cc
